v1.0.0/_sources/generated/dlpy.sequential.Sequential.rst.txt
dlpy.sequential.Sequential
==========================

.. currentmodule:: dlpy.sequential

.. autoclass:: Sequential

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Sequential.__init__
      ~Sequential.add
      ~Sequential.change_labels
      ~Sequential.compile
      ~Sequential.count_params
      ~Sequential.deploy
      ~Sequential.evaluate
      ~Sequential.evaluate_object_detection
      ~Sequential.fit
      ~Sequential.from_caffe_model
      ~Sequential.from_keras_model
      ~Sequential.from_sashdat
      ~Sequential.from_table
      ~Sequential.get_feature_maps
      ~Sequential.get_features
      ~Sequential.get_model_info
      ~Sequential.heat_map_analysis
      ~Sequential.load
      ~Sequential.load_weights
      ~Sequential.load_weights_attr
      ~Sequential.load_weights_from_caffe
      ~Sequential.load_weights_from_file
      ~Sequential.load_weights_from_file_with_labels
      ~Sequential.load_weights_from_keras
      ~Sequential.load_weights_from_table
      ~Sequential.plot_evaluate_res
      ~Sequential.plot_heat_map
      ~Sequential.plot_network
      ~Sequential.plot_training_history
      ~Sequential.pop
      ~Sequential.predict
      ~Sequential.print_summary
      ~Sequential.save_to_astore
      ~Sequential.save_to_table
      ~Sequential.save_to_table_with_caslibify
      ~Sequential.score
      ~Sequential.set_weights
      ~Sequential.set_weights_attr
      ~Sequential.switch
      ~Sequential.train
      ~Sequential.tune
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Sequential.summary
   
   